[leo]: integrating firebase and google auth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Final Project PSI</string>
+    <string name="web_client_id">908020444192-4t29cqfdif93uopd3frb48i3krse0e7i.apps.googleusercontent.com</string>
 </resources>
